# testcontainers-java2py

./: .gitignore  ADVANCED_FEATURES_SUMMARY.md  COMPREHENSIVE_JAVA_PYTHON_COMPARISON.md  CONTAINER_TYPES_CONVERSION.md  CONVERSION_SUMMARY.md  DETAILED_IMPLEMENTATION_GUIDE.md  DOCKER_CLIENT_CONVERSION.md  DOCKER_CLIENT_README.md  FINAL_SUMMARY.md  GENERIC_CONTAINER_CONVERSION.md  GENERIC_CONTAINER_MAPPING.md  IMAGE_HANDLING_CONVERSION.md  IMAGE_NAME_SUBSTITUTOR_EXPLAINED.md  IMAGE_NAME_SUBSTITUTOR_IMPLEMENTATION.md  JAVA_PYTHON_COMPARISON.md  MIGRATION_PLAN.md  MODULE_CONVERSION_SUMMARY.md  PROGRESS_SUMMARY.md  PROJECT_STATUS.md  README.md  WAIT_STRATEGIES_CONVERSION.md  WAIT_STRATEGIES_SUMMARY.md  pyproject.toml  testcontainers.toml.example
.github/agents/: INSTRUCTIONS.md
examples/: docker_client_example.py  generic_container_example.py
java_origin/: README.md
src/testcontainers/: __init__.py  config.py
src/testcontainers/compose/: __init__.py  compose_container.py
src/testcontainers/core/: __init__.py  container.py  container_state.py  container_types.py  docker_client.py  generic_container.py  network.py  socat_container.py
src/testcontainers/images/: __init__.py  image_data.py  image_pull_policy.py  policies.py  pull_policy.py  remote_image.py  substitutor.py
src/testcontainers/modules/: __init__.py  activemq.py  azure.py  cassandra.py  chromadb.py  clickhouse.py  cockroachdb.py  consul.py  couchbase.py  couchdb.py  cratedb.py  databend.py  db2.py  elasticsearch.py  gcloud.py  grafana.py  hivemq.py  influxdb.py  jdbc.py  k3s.py  k6.py  kafka.py  ldap.py  localstack.py  mariadb.py  memcached.py  milvus.py  minio.py  mockserver.py  mongodb.py  mssqlserver.py  mysql.py  nats.py  neo4j.py  nginx.py  oceanbase.py  ollama.py  oracle_free.py  oracle_xe.py  orientdb.py  (+19 more)
src/testcontainers/output/: __init__.py  log_consumer.py  output_frame.py
src/testcontainers/pytest/: __init__.py  conftest_example.py  plugin.py  pytest_support.py  test_helpers.py
src/testcontainers/waiting/: __init__.py  healthcheck.py  http.py  log.py  port.py  shell.py  sqlalchemy.py  wait_all.py  wait_strategy.py
tests/: __init__.py
tests/unit/: test_additional_databases.py  test_advanced_features.py  test_advanced_wait_strategies.py  test_container.py  test_container_reuse.py  test_container_types.py  test_database_modules.py  test_docker_client.py  test_generic_container.py  test_images.py  test_infrastructure_modules.py  test_k6_presto_trino_milvus.py  test_messaging_modules.py  test_new_modules.py  test_output.py  test_pytest_integration.py  test_search_queue_modules.py  test_service_modules.py  test_sqlalchemy_wait.py  test_substitutor.py  test_vector_and_testing_modules.py  test_wait_strategies.py
